scripts/nullaway/annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8.txt
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/TrainingSet.java:35: error: [NullAway] initializer method does not guarantee @NonNull fields input (line 24), output (line 25), classify (line 26) are initialized along all control-flow paths (remember to check for exceptions or early returns).
   TrainingSet ( int inputCount , int outputCount )
   ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/MainEntry.java:61: error: [NullAway] initializer method does not guarantee @NonNull field net (line 51) is initialized along all control-flow paths (remember to check for exceptions or early returns).
   MainEntry()
   ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/Entry.java:94: error: [NullAway] initializer method does not guarantee @NonNull fields entryImage (line 26), entryGraphics (line 32), sample (line 48), pixelMap (line 88) are initialized along all control-flow paths (remember to check for exceptions or early returns).
   Entry()
   ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/KohonenNetwork.java:72: error: [NullAway] initializer method does not guarantee @NonNull field train (line 63) is initialized along all control-flow paths (remember to check for exceptions or early returns).
   public KohonenNetwork(int inputCount,int outputCount,MainEntry owner)
          ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/KohonenNetwork.java:476: error: [NullAway] passing @Nullable parameter 'work' where @NonNull is required
                        bigerr , correc , work ) ;
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/Network.java:31: error: [NullAway] @NonNull field output not initialized
   protected double output[];
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/SolveStep.java:12: error: [NullAway] @NonNull field sm not initialized
	public SolveMethod sm;
	                   ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/SolveStep.java:13: error: [NullAway] @NonNull field cell not initialized
	public Cell cell;
	            ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/LockedCandidatesPointing.java:147: error: [NullAway] dereferenced expression ss.info is @Nullable
				ss.info.equalsIgnoreCase("ROW") ? "row":"column",
				       ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/BUG.java:55: error: [NullAway] dereferenced expression threeCell is @Nullable
		List<Integer> candidates = threeCell.getCandidates();
		                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairRow.java:28: error: [NullAway] dereferenced expression nakedPair is @Nullable
		nakedPair.get(0).setCandidates(new ArrayList<Integer>( Arrays.asList(couple.a,couple.b) ));
		         ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairRow.java:28: error: [NullAway] dereferenced expression couple is @Nullable
		nakedPair.get(0).setCandidates(new ArrayList<Integer>( Arrays.asList(couple.a,couple.b) ));
		                                                                           ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairRow.java:53: error: [NullAway] dereferenced expression nakedPair is @Nullable
		int row = nakedPair.get(0).getRow();
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairCol.java:26: error: [NullAway] dereferenced expression nakedPair is @Nullable
		nakedPair.get(0).setCandidates(new ArrayList<Integer>( Arrays.asList(couple.a,couple.b) ));
		         ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairCol.java:26: error: [NullAway] dereferenced expression couple is @Nullable
		nakedPair.get(0).setCandidates(new ArrayList<Integer>( Arrays.asList(couple.a,couple.b) ));
		                                                                           ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairCol.java:50: error: [NullAway] dereferenced expression nakedPair is @Nullable
		int col = nakedPair.get(0).getCol();
		                   ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairBlock.java:29: error: [NullAway] dereferenced expression nakedPair is @Nullable
		nakedPair.get(0).setCandidates(new ArrayList<Integer>( Arrays.asList(couple.a,couple.b) ));
		         ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairBlock.java:29: error: [NullAway] dereferenced expression couple is @Nullable
		nakedPair.get(0).setCandidates(new ArrayList<Integer>( Arrays.asList(couple.a,couple.b) ));
		                                                                           ^
    (see http://t.uber.com/nullaway )
../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/solver/methods/naked/pair/NakedPairBlock.java:59: error: [NullAway] dereferenced expression nakedPair is @Nullable
		int block = nakedPair.get(0).getBlock();
		                     ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url74b2be4e76_gurbano_petulant_octo_sudoku_tgz-pJ8-test_testJ8/src/ocr/MainEntry.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
19 errors
